--- a/internal/templates/login.html
+++ b/internal/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
     <script src="/static/js/min.js"></script>
     <style>
         body {
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>Register</h1>
+        <h1>Login</h1>
         
         {{if .error}}
         <div class="error">
@@ -89,7 +89,7 @@
         </div>
         {{end}}
 
-        <form method="POST" action="/register">
+        <form method="POST" action="/login">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input 
@@ -108,30 +108,18 @@
                     type="password" 
                     id="password" 
                     name="password" 
-                    onkeyup="passwordChecks()"
-                    required
-                >
-            </div>
-
-            <div class="form-group">
-                <label for="confirm_password">Confirm Password:</label>
-                <input 
-                    type="password" 
-                    id="confirm_password" 
-                    name="confirm_password" 
-                    onkeyup="passwordChecks()"
+                    onkeyup="loginPasswordChecks()"
                     required
                 >
             </div>
             <div id="error-msg" class="error" style="display: none;">
-
             </div>
 
-            <button id="submit_btn" type="submit">Register</button>
+            <button id="submit_btn" type="submit">Login</button>
         </form>
 
         <div class="login-link">
-            <p>Already have an account?<a href="/login"> <b>Login here</b></a></p>
+            <p>Don't have an account yet?<a href="/register"> <b>Register here</b></a></p>
         </div>
     </div>
 </body>
